--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               cards, and investment options.
             </p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-              <a href="https://psuuc-nbcamatayan.github.io/ebankings"
+              <a href="login.html"
               <button type="button" class="btn btn-info btn-lg px-4 me-md-2">
                 Get Started
               </button>
