--- a/signup.html
+++ b/signup.html
@@ -64,7 +64,7 @@
 							<a href="" class="btn btn-social btn-twitter">twitter</a>
 						</div>
 						<div class="text-center mb-5" style="color: #777;">Already have an account?
-							<a class="login-link" href="index.html">Login here</a>
+							<a class="login-link" href="login.html">Login here</a>
 				   	</div>
 					</form>
 				</div>
