--- a/accountsummary.html
+++ b/accountsummary.html
@@ -94,14 +94,14 @@
         <header class="pt-2 pb-2">
             <div class="container">
                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                    <img src="logo-removebg-preview.png" alt="" height="55" width="50">
+                    <img src="logo.png" alt="" height="55" width="50">
                     <h1 class="nav col-12 col-lg-auto ms-5 me-auto mb-2 justify-content-center mb-md-0 h2 text-light">E-Banking</h1>
                     <button type="button" class="btn btn-secondary me-3" id="homeBtn">Home</button>
                     <button type="button" class="btn btn-secondary me-3" id="homeBtn">About Us</button>
                     <button type="button" class="btn btn-secondary me-3" id="homeBtn">Support</button>
                     <div class="dropdown text-end">
                         <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="bacground.webp" alt="mdo" width="35" height="35" class="rounded-circle">
+                            <img src="profile" alt="mdo" width="35" height="35" class="rounded-circle">
                         </a>
                         <ul class="dropdown-menu text-small">
                             <li><a class="dropdown-item" href="Login.html">Sign out</a></li>
